--- a/Main.css
+++ b/Main.css
@@ -1,13 +1,7 @@
-
-
-* {
-  border: 0;
-  margin: 0;
-}
-
-canvas{
+canvas
+  {
   border-style: solid;
   border-color: red;
   border-width: 1px;
   margin: 200px;
-}
+  }
